Add filter for Transaction Type (#153)
* Add transaction type filter

* Fix query

* Update openapi

* Regenerate Openapi
